--- a/main.css
+++ b/main.css
@@ -1,7 +1,11 @@
 body {
+  font-family: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  font-size: 14px;
   width: 100vw;
   overflow-x: hidden;
-  margin: 8px 0;
+  margin: 0;
+  margin-top: 8px;
 }
 
 #root {
@@ -12,11 +16,12 @@ body {
 /* width */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #202020;
+  background: #eee;
 }
 
 /* Handle */
